--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.2",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.3"
   },
