--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
-    "react-type-animation": "^3.2.0",
-    "tailwindcss": "^3.4.3"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -29,6 +28,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
